2008-08-26  Carlos Garnacho  <carlos@imendio.com>

	* src/Makefile.am:
	* src/libinotify/Makefile.am:
	* tests/common/Makefile.am:
	* tests/common/tracker-test-helpers.c:
	* tests/libtracker-common/Makefile.am:
	* tests/libtracker-db/Makefile.am: Fix distcheck, to some extent.

2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/tracker-indexer/tracker-main.c: raised the "wait for more"
	timeout to 5 minutes. The indexer is harmless for the system's
	resources while waiting. VS. stopping and starting the indexer often
	isn't harmless for the system's resources.

2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/trackerd/tracker-processor.c: a patch fix for the processor. It
	seems that a timeout that happens after the indexer has shut down
	calls its callback. That callback sets the status back to indexing.

	When Martyn is back from holiday he should take a look at this.

2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/trackerd/tracker-daemon.c: Changed the way we emit the
	stats-changed signal. Fixes a crash.

2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/tracker-indexer/tracker-indexer.c
	* src/libtracker-db/tracker-db-index.h
	* src/libtracker-db/tracker-db-index.c: Making flushing the index more
	responsive

2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/libtracker-db/tracker-db-index.c: removed a mutex. The API of
	tracker-db-index.h is never used by more than one thread. Therefore 
	can't there be a need for a mutex. If we do need a mutex, then just
	reverting this wont suffice: changes that will happen after this
	commit will require using a recursive mutex instead.

2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/trackerd/tracker-daemon.c
	* src/trackerd/tracker-marshal.list
	* data/dbus/tracker-daemon.xml: Added a stats-changed signal

2008-08-26  Carlos Garnacho  <carlos@imendio.com>

	* tests/tracker-indexer/Makefile.am: Added LIBDIR define for
	tracker-metadata-utils.c
